--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Programming Info</string>
+    <string name="app_name">Programming Languages</string>
     <string name="descreption">Bu maqolamda hozirgi zamonda eng rivojlangan dasturlash tillaridan biri bo\'lgan C++ dasturlash tili haqida yozmoqchiman. Bu til tarixi va kelib c</string>
     <string name="version_1_0_0">version 1.0.0</string>
     <string name="programming_languages">Programming Languages</string>
